--- a/web/index.html
+++ b/web/index.html
@@ -34,5 +34,7 @@
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
+  <script src="https://unpkg.com/html5-qrcode@2.3.8/minified/html5-qrcode.min.js"></script>
+
 </body>
 </html>
